--- a/Downloader/Downloader.vcxproj
+++ b/Downloader/Downloader.vcxproj
@@ -104,6 +104,7 @@
     <ClInclude Include="DlHelper.h" />
     <ClInclude Include="Downloader.h" />
     <ClInclude Include="DownloaderDlg.h" />
+    <ClInclude Include="MyThreadPool.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -112,6 +113,7 @@
     <ClCompile Include="DlHelper.cpp" />
     <ClCompile Include="Downloader.cpp" />
     <ClCompile Include="DownloaderDlg.cpp" />
+    <ClCompile Include="MyThreadPool.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -129,4 +131,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="Downloader.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
