--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,4 +10,6 @@ deploy:
     secure: 89XROd4oa6+aGRM36tBcVtEOFXHyH7f8nH51GHrK0trN01/+m/Lgu0uCPK1LNkG4
   draft: false
   prerelease: false
-  appveyor_repo_tag: false
+  on:
+    branch: master                # release from master branch only
+    appveyor_repo_tag: true       # deploy on tag push only
